--- a/client/public/index.html
+++ b/client/public/index.html
@@ -31,6 +31,12 @@
     gtag('config', 'AW-1007891055');
   </script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous">
+  </script>
   <script src="https://cdn.snipcart.com/scripts/2.0/snipcart.js" id="snipcart"
     data-api-key="NThkYzEyNmQtYmI2Zi00YTQyLWE0MjEtYjM0NGIzOWU0YjUxNjM3MDA2MDE4NTExMzQ3NTg2"></script>
 </body>
